Changes to structure & logos

--- a/index.html
+++ b/index.html
@@ -107,24 +107,12 @@
         <div class="flex items-center justify-between">
           <!-- Logo -->
           <div class="flex items-center gap-3">
-            <div class="logo-glow p-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#ff6600"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10" />
-              </svg>
-            </div>
-            <span class="text-2xl font-bold tracking-tight gradient-text"
-              >Lesion.io</span
-            >
+            <img
+              src="./src/images/Asset-5.png"
+              alt="Asset-2"
+              width="140px"
+              height="120px"
+            />
           </div>
 
           <!-- Navigation Links -->
@@ -434,13 +422,12 @@
           </div>
 
           <h1 class="text-5xl md:text-7xl mb-6 font-bold gradient-text">
-            Offensive Security Arsenal for Modern Threats
+            Offensive Security Tools & Services
           </h1>
 
           <p class="text-xl text-slate-400 mb-8 max-w-2xl mx-auto">
-            Advanced penetration testing software designed for red team
-            professionals. Exploit, analyze, and dominate with military-grade
-            tooling.
+            Advanced penetration testing software designed for security
+            professionals. Exploit, collaborate, and dominate.
           </p>
 
           <div class="flex flex-col sm:flex-row gap-4 justify-center mb-16">
@@ -1047,10 +1034,9 @@
           <div
             class="p-8 bg-slate-900/50 border-2 border-orange-500/20 rounded-lg"
           >
-            <h3 class="text-2xl mb-2 font-semibold">Solo Operator</h3>
+            <h3 class="text-2xl mb-2 font-semibold">Researcher</h3>
             <div class="mb-6">
-              <span class="text-4xl font-bold">$99</span>
-              <span class="text-slate-400">/month</span>
+              <span class="text-4xl font-bold">Free</span>
             </div>
             <ul class="space-y-3 mb-8">
               <li class="flex items-start gap-2">
@@ -1156,9 +1142,9 @@
             >
               Most Popular
             </div>
-            <h3 class="text-2xl mb-2 font-semibold">Red Team</h3>
+            <h3 class="text-2xl mb-2 font-semibold">Penetration Tester</h3>
             <div class="mb-6">
-              <span class="text-4xl font-bold">$499</span>
+              <span class="text-4xl font-bold">$10</span>
               <span class="text-slate-400">/month</span>
             </div>
             <ul class="space-y-3 mb-8">
@@ -1298,7 +1284,7 @@
           <div
             class="p-8 bg-slate-900/50 border-2 border-orange-500/20 rounded-lg"
           >
-            <h3 class="text-2xl mb-2 font-semibold">Enterprise</h3>
+            <h3 class="text-2xl mb-2 font-semibold">Team</h3>
             <div class="mb-6">
               <span class="text-4xl font-bold">Custom</span>
             </div>
