--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesion.io - Offensive Security Services & Tools</title>
     <link href="./src/output.css" rel="stylesheet" />
+    /*Terminal section fonts link*/
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap"
+    />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
@@ -15,6 +20,17 @@
       body {
         background: #0a0e1a;
         overflow-x: hidden;
+      }
+      .terminal-font {
+        font-family:
+          "JetBrains Mono", "Fira Code", "Cascadia Code", "SF Mono", "Menlo",
+          "Consolas", "Liberation Mono", monospace;
+
+        line-height: 1.45;
+        letter-spacing: 0.01em;
+
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
 
       #canvas {
@@ -417,7 +433,7 @@
               <line x1="12" y1="19" x2="20" y2="19" />
             </svg>
             <span class="text-sm font-medium"
-              >Trusted by Elite Red Teams Worldwide</span
+              >Trusted by Security Professionals Worldwide</span
             >
           </div>
 
@@ -432,9 +448,10 @@
 
           <div class="flex flex-col sm:flex-row gap-4 justify-center mb-16">
             <button
+              onclick="window.open('https://app.lesion.io/signup')"
               class="px-8 py-4 rounded-lg bg-orange-600 hover:bg-orange-700 text-white font-medium border border-orange-500/50 transition-all shadow-lg shadow-orange-600/20 flex items-center justify-center gap-2"
             >
-              Start Free Trial
+              Join for Free
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
@@ -471,27 +488,24 @@
                 </div>
                 <span class="text-xs text-slate-500 ml-2">terminal</span>
               </div>
-              <div class="p-6 font-mono text-sm text-left">
-                <div class="text-green-400">
-                  $ redstrike --scan --target vulnerable.example.com
+              <div class="p-6 font-mono text-sm text-left terminal-font">
+                <div class="text-green-400">$ user@target:~ sudo --version</div>
+                <div class="text-slate-400">Sudo version 1.9.17</div>
+                <div class="text-white-400">
+                  [*] Searched app.lesion.io/search
                 </div>
-                <div class="text-slate-500 mt-2">
-                  [+] Initializing vulnerability scanner...
+                <div class="text-white-400">
+                  [*] Found 23 potential CVEs for sudo 1.9.17
                 </div>
-                <div class="text-orange-500 mt-1">[*] Found 47 open ports</div>
-                <div class="text-orange-500 mt-1">
-                  [*] Detected CVE-2024-1234 (Critical)
-                </div>
-                <div class="text-green-400 mt-1">
-                  [✓] Exploit available - lesion.io/search
-                </div>
-                <div class="text-slate-500 mt-2">[+] Launching payload...</div>
-                <div class="text-green-400 mt-1">[✓] Shell access gained</div>
-                <div class="mt-3 flex items-center">
-                  <span class="text-green-400">root@target:~#</span>
-                  <span class="ml-2 animate-pulse">_</span>
-                </div>
-              </div>
+                <div class="text-white-400">[✓] 17 PoCs identified</div>
+                <div class="flex items-center">
+                  <span class="text-white-400"
+                    >[✓] Payload verified and enhanced</span></div>
+                <div class="text-green-400">$ user@target:~ echo "PAYLOAD" > payload.sh && chmod +x payload.sh</div>
+                <div class="text-green-400">$ user@target:~ ./payload.sh</div>
+                <div class="text-green-400">$ root@target:~ whoami</div>
+                <div class="text-slate-400">root</div>
+            
             </div>
           </div>
         </div>
@@ -536,10 +550,9 @@
             </p>
 
             <p class="text-slate-400 mb-8">
-              Access the world's largest database of verified exploits, CVEs,
-              and proof-of-concept code. Lesion Search indexes millions of
-              security advisories and provides instant access to working
-              exploits for penetration testers.
+              Lesion Search indexes millions of security advisories and provides
+              instant access to working exploits for penetration testers. With
+              AI enhancement exploits are safer and easier to use.
             </p>
 
             <ul class="space-y-4 mb-8">
@@ -642,6 +655,7 @@
 
             <div class="flex flex-col sm:flex-row gap-4">
               <button
+                onclick="window.open('https://app.lesion.io/signup')"
                 class="px-6 py-3 rounded-lg bg-orange-600 hover:bg-orange-700 text-white font-medium border border-orange-500/50 transition-all shadow-lg shadow-orange-600/20 flex items-center justify-center gap-2"
               >
                 Try Lesion Search
@@ -693,10 +707,11 @@
                   type="text"
                   placeholder="Search exploits, CVEs, malware..."
                   class="flex-1 bg-transparent text-slate-300 placeholder-slate-600 outline-none"
-                  value="CVE-2024"
+                  value="Apache Struts"
                 />
                 <button
                   class="px-4 py-2 rounded-lg bg-orange-600 hover:bg-orange-700 text-white text-sm font-medium"
+                  onclick="window.open('https://app.lesion.io/search')"
                 >
                   Search
                 </button>
@@ -709,7 +724,7 @@
                   <div class="flex items-start justify-between mb-2">
                     <span
                       class="font-mono text-orange-500 group-hover:text-orange-400"
-                      >CVE-2024-1234</span
+                      >CVE-2024-53677</span
                     >
                     <span
                       class="text-xs px-2 py-1 rounded bg-red-500/20 text-red-400 border border-red-500/30"
@@ -717,10 +732,10 @@
                     >
                   </div>
                   <p class="text-sm text-slate-400 mb-2">
-                    Remote Code Execution in Apache
+                    File upload logic in Apache Struts is flawed. An attacker...
                   </p>
                   <div class="text-xs text-slate-500">
-                    12 exploits available
+                    17 exploits available
                   </div>
                 </div>
 
@@ -730,15 +745,15 @@
                   <div class="flex items-start justify-between mb-2">
                     <span
                       class="font-mono text-orange-500 group-hover:text-orange-400"
-                      >CVE-2024-5678</span
+                      >CVE-2021-31805</span
                     >
                     <span
-                      class="text-xs px-2 py-1 rounded bg-orange-500/20 text-orange-400 border border-orange-500/30"
-                      >High</span
+                      class="text-xs px-2 py-1 rounded bg-red-500/20 text-red-400 border border-red-500/30"
+                      >Critical</span
                     >
                   </div>
                   <p class="text-sm text-slate-400 mb-2">
-                    SQL Injection in WordPress Plugin
+                    So from Apache Struts 2.0.0 to 2.5.29, still some of the
                   </p>
                   <div class="text-xs text-slate-500">8 exploits available</div>
                 </div>
@@ -752,16 +767,14 @@
                       >CVE-2024-9012</span
                     >
                     <span
-                      class="text-xs px-2 py-1 rounded bg-red-500/20 text-red-400 border border-red-500/30"
-                      >Critical</span
+                      class="text-xs px-2 py-1 rounded bg-orange-500/20 text-orange-400 border border-orange-500/30"
+                      >High</span
                     >
                   </div>
                   <p class="text-sm text-slate-400 mb-2">
-                    Buffer Overflow in OpenSSL
+                    Missing XML Validation vulnerability in Apache Struts
                   </p>
-                  <div class="text-xs text-slate-500">
-                    15 exploits available
-                  </div>
+                  <div class="text-xs text-slate-500">0 exploits available</div>
                 </div>
 
                 <div
@@ -770,7 +783,7 @@
                   <div class="flex items-start justify-between mb-2">
                     <span
                       class="font-mono text-orange-500 group-hover:text-orange-400"
-                      >CVE-2024-3456</span
+                      >CVE-2023-6308</span
                     >
                     <span
                       class="text-xs px-2 py-1 rounded bg-yellow-500/20 text-yellow-400 border border-yellow-500/30"
@@ -778,15 +791,18 @@
                     >
                   </div>
                   <p class="text-sm text-slate-400 mb-2">
-                    XSS Vulnerability in React
+                    A vulnerability, which was classified as critical, has been
+                    found in
                   </p>
-                  <div class="text-xs text-slate-500">4 exploits available</div>
+                  <div class="text-xs text-slate-500">3 exploits available</div>
                 </div>
               </div>
 
               <div class="mt-6 pt-4 border-t border-orange-500/10 text-center">
                 <a
-                  href="#"
+                  href="https://app.lesion.io/search"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   class="text-sm text-orange-500 hover:text-orange-400 flex items-center justify-center gap-2"
                 >
                   View all results
@@ -1128,6 +1144,7 @@
               </li>
             </ul>
             <button
+              onclick="window.open('https://app.lesion.io/signup')"
               class="w-full px-6 py-3 rounded-lg bg-slate-800 hover:bg-slate-700 text-slate-100 font-medium transition-all"
             >
               Get Started
@@ -1441,9 +1458,10 @@
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <button
+            onclick="window.open('https://app.lesion.io/signup')"
             class="px-8 py-4 rounded-lg bg-orange-600 hover:bg-orange-700 text-white font-medium border border-orange-500/50 transition-all shadow-lg shadow-orange-600/20"
           >
-            Start Free Trial
+            Join for Free
           </button>
           <button
             class="px-8 py-4 rounded-lg border-2 border-orange-500/30 text-orange-500 hover:bg-orange-500/10 font-medium transition-all"
@@ -1559,7 +1577,7 @@
           class="pt-8 border-t border-orange-500/20 text-center text-sm text-slate-400"
         >
           <p>
-            &copy; 2026 REDSTRIKE. All rights reserved. For authorized security
+            &copy; 2026 Lesion.io All rights reserved. For authorized security
             testing only.
           </p>
         </div>
