Changing the wording here.

--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
             <span class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-orange-500/10 text-orange-500 border border-orange-500/30 mb-4">Alpha</span>
             <h3 class="text-xl mb-3 font-semibold">Lesion Workbench</h3>
             <p class="text-slate-400">
-              A collaboration and project creation tool for penetraiton testers and red teamers.
+              A collaboration and project creation tool for penetration testers and red teamers.
             </p>
           </div>
 
