--- a/index.html
+++ b/index.html
@@ -136,82 +136,11 @@
             <!-- Features Dropdown -->
             <div class="dropdown relative">
               <a
-                href="#features"
-                class="px-4 py-2 rounded-lg hover:bg-orange-500/10 hover:text-orange-500 transition-all text-slate-300 font-medium flex items-center gap-1"
-              >
-                Features
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
-              </a>
-              <div class="dropdown-content">
-                <a href="#reconnaissance">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    style="margin-right: 0.5rem"
-                  >
-                    <circle cx="12" cy="12" r="10" />
-                    <circle cx="12" cy="12" r="6" />
-                    <circle cx="12" cy="12" r="2" />
-                  </svg>
-                  Reconnaissance
-                </a>
-                <a href="#exploitation">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    style="margin-right: 0.5rem"
-                  >
-                    <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2" />
-                  </svg>
-                  Exploitation
-                </a>
-                <a href="#credentials">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    style="margin-right: 0.5rem"
-                  >
-                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2" />
-                    <path d="M7 11V7a5 5 0 0 1 10 0v4" />
-                  </svg>
-                  Credential Harvesting
-                </a>
-                <div class="nav-divider"></div>
-                <a href="#all-features">View All Features</a>
-              </div>
+              href="#features"
+              class="px-4 py-2 rounded-lg hover:bg-orange-500/10 hover:text-orange-500 transition-all text-slate-300 font-medium"
+            >
+              Features
+            </a>
             </div>
 
             <!-- Tools Dropdown -->
@@ -236,7 +165,7 @@
                 </svg>
               </a>
               <div class="dropdown-content">
-                <a href="#search">
+                <a href="https://app.lesion.io/search">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
@@ -254,7 +183,7 @@
                   </svg>
                   Lesion Search
                 </a>
-                <a href="#scanner">
+                <a href="https://app.lesion.io/contact_us">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
@@ -272,9 +201,9 @@
                     <path d="M21 17v2a2 2 0 0 1-2 2h-2" />
                     <path d="M7 21H5a2 2 0 0 1-2-2v-2" />
                   </svg>
-                  Vulnerability Scanner
+                  Lesion Missions
                 </a>
-                <a href="#payload">
+                <a href="https://app.lesion.io/contact_us">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
@@ -290,25 +219,7 @@
                     <polyline points="16 18 22 12 16 6" />
                     <polyline points="8 6 2 12 8 18" />
                   </svg>
-                  Payload Generator
-                </a>
-                <a href="#c2">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    style="margin-right: 0.5rem"
-                  >
-                    <rect x="2" y="7" width="20" height="14" rx="2" ry="2" />
-                    <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16" />
-                  </svg>
-                  C2 Framework
+                  Lesion Controls
                 </a>
               </div>
             </div>
@@ -335,9 +246,9 @@
                 </svg>
               </a>
               <div class="dropdown-content">
-                <a href="#enterprise">Enterprise Security</a>
-                <a href="#compliance">Compliance Testing</a>
-                <a href="#training">Red Team Training</a>
+                <a href="https://app.lesion.io/contact_us">Int / Ext Pentesting</a>
+                <a href="https://app.lesion.io/contact_us">Web App Pentesting</a>
+                <a href="https://app.lesion.io/contact_usg">Cloud Security</a>
                 <div class="nav-divider"></div>
                 <a href="#case-studies">Case Studies</a>
               </div>
@@ -373,12 +284,7 @@
                 </svg>
               </a>
               <div class="dropdown-content">
-                <a href="#docs">Documentation</a>
-                <a href="#api">API Reference</a>
-                <a href="#blog">Blog</a>
-                <a href="#community">Community</a>
-                <div class="nav-divider"></div>
-                <a href="#support">Support Center</a>
+                <a href="https://blog.lesion.io">Blog</a>
               </div>
             </div>
           </div>
@@ -679,7 +585,7 @@
               <button
                 class="px-6 py-3 rounded-lg border-2 border-orange-500/30 text-orange-500 hover:bg-orange-500/10 font-medium transition-all"
               >
-                View Documentation
+                Use Case
               </button>
             </div>
           </div>
@@ -893,9 +799,9 @@
             class="bg-slate-900/50 border-2 border-orange-500/20 p-6 rounded-lg hover:border-orange-500/40 transition-all group"
           >
             <span class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-orange-500/10 text-orange-500 border border-orange-500/30 mb-4">Alpha</span>
-            <h3 class="text-xl mb-3 font-semibold">Lesion Workbench</h3>
+            <h3 class="text-xl mb-3 font-semibold">Lesion Controls</h3>
             <p class="text-slate-400">
-              A collaboration and project creation tool for penetration testers and red teamers.
+              A compliance and security framework tool built to streamline cybersecurity.
             </p>
           </div>
 
@@ -905,7 +811,7 @@
             <span class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-orange-500/10 text-orange-500 border border-orange-500/30 mb-4">Pre-Alpha</span>
             <h3 class="text-xl mb-3 font-semibold">Lesion Missions</h3>
             <p class="text-slate-400">
-              An ASM, PTaaS Platform, and Reporting platform for penetration testers.
+              Coming soon...
             </p>
           </div>
 
@@ -1397,6 +1303,7 @@
             </ul>
             <button
               class="w-full px-6 py-3 rounded-lg bg-slate-800 hover:bg-slate-700 text-slate-100 font-medium transition-all"
+              onclick="window.open('https://app.lesion.io/contact_us')"
             >
               Contact Sales
             </button>
@@ -1426,8 +1333,9 @@
           </button>
           <button
             class="px-8 py-4 rounded-lg border-2 border-orange-500/30 text-orange-500 hover:bg-orange-500/10 font-medium transition-all"
+            onclick="window.open('https://app.lesion.io/contact_us')"
           >
-            Schedule Demo
+            Contact Us
           </button>
         </div>
       </div>
@@ -1439,20 +1347,9 @@
         <div class="grid md:grid-cols-4 gap-8 mb-8">
           <div>
             <div class="flex items-center gap-2 mb-4">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#ff6600"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10" />
+              <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10" />
               </svg>
-              <span class="text-lg font-semibold">REDSTRIKE</span>
+              <span class="text-lg font-semibold">Lesion.io</span>
             </div>
             <p class="text-sm text-slate-400">
               Advanced offensive security software for elite penetration testers
